# SkyForgeConsole

./: .gitignore  CMakeLists.txt  README.md  WindowGenerateProject.bat
ConsoleLog/: CMakeLists.txt
ConsoleLog/Source/Core/: ConsoleLog.cs  IConsoleLog.cs  Program.cs
SandBox/: CMakeLIsts.txt
SandBox/Source/: Program.cs  SandBox.cs
SkyForgeConsole/: CMakeLists.txt
SkyForgeConsole/Source/Core/: EntryPoint.cs  IApplication.cs
SkyForgeConsole/Source/SkyForgeConsole/Core/: Application.cs  EntryPoint.cs  IEntryPoint.cs
SkyForgeConsole/Source/SkyForgeConsole/Systems/FileSystem/: FileSystem.cs  IControllerIO.cs  NetCoreIOController.cs
SkyForgeConsole/Source/SkyForgeConsole/Systems/LogSystem/: BaseLogger.cs  ConsoleLogger.cs  FileLogger.cs  ILogLevel.cs  ILogSystem.cs  ILogger.cs  Log.cs  LogLevel.cs  LogSystem.cs
SkyForgeConsoleTest/: CMakeLists.txt
SkyForgeConsoleTest/Source/Core/: ApplicationTest.cs  EntryPointTest.cs
SkyForgeConsoleTest/Source/Systems/FileSystem/: FileSystemTest.cs
SkyForgeConsoleTest/Source/Systems/LogSystem/: LogLevelTest.cs
UMLModel/: FileSystem.mdj  LogSystem.mdj
